# App-MeasurementComputing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui  mccdevice.h
MCC-UL/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui  mcc_interface.cpp  mcc_interface.h
MCC-UL/cmake/: FindMCCUL.cmake
MCC-libusb/: CMakeLists.txt  MCCOutlet.cpp  README.md  mccdevice.cpp
MCC-libusb/cmake/: Findlibusb-1.0.cmake
cmake/: FindUSB1.cmake
